Fix some D-Bus calls to the groupware interface. Untested. Once the groupware D-Bus stuff has been properly ported, we can use an auto-generated interface for this, so these kind of errors don't happen again.

BUG: 154201

svn path=/trunk/KDE/kdepim/kontact/plugins/; revision=750997