plugins/kaddressbook/kaddressbook_plugin.cpp
@@ -117,7 +117,10 @@ void KAddressbookPlugin::slotNewContact()
 
 void KAddressbookPlugin::slotSyncContacts()
 {
-  QDBusMessage message = QDBusMessage::createSignal( "/Groupware", "org.kde.kmail", "triggerSync(QString)");
+  QDBusMessage message =
+      QDBusMessage::createMethodCall( "org.kde.kmail", "/Groupware",
+                                      "org.kde.kmail.groupware",
+                                      "triggerSync" );
   message << QString( "Contact" );
   QDBusConnection::sessionBus().send( message );
 }
