plugins/korganizer/todoplugin.cpp
@@ -139,7 +139,10 @@ void TodoPlugin::slotNewTodo()
 
 void TodoPlugin::slotSyncTodos()
 {
-  QDBusMessage message = QDBusMessage::createSignal( "/Groupware", "org.kde.kmail", "triggerSync(QString)");
+  QDBusMessage message =
+      QDBusMessage::createMethodCall( "org.kde.kmail", "/Groupware",
+                                      "org.kde.kmail.groupware",
+                                      "triggerSync" );
   message << QString( "Todo" );
   QDBusConnection::sessionBus().send( message );
 }
